# ai-agent-demo

./: .gitignore  CLAUDE.md  README.md
demos/03-memory-agent/backend/: .env.example  check_data.py  pyproject.toml  pytest.ini  run_migration.py
demos/03-memory-agent/backend/app/: config.py  models.py
demos/03-memory-agent/backend/app/agent/: base.py
demos/03-memory-agent/backend/app/api/: chat.py  health.py  sessions.py
demos/03-memory-agent/backend/app/auth/: dependencies.py
demos/03-memory-agent/backend/app/db/: connection.py  repositories.py
demos/03-memory-agent/backend/app/memory/: __init__.py  config.py  importance_scorer.py  manager.py  smart_memory_manager.py  topic_segmenter.py  vector_store.py
demos/03-memory-agent/backend/app/providers/: __init__.py  base.py  (+3 more)
demos/03-memory-agent/backend/migrations/: 001_initial_schema.sql  002_add_session_title.sql  003_add_memory_summaries.sql  004_add_smart_memory.sql  005_fix_embedding_dimension.sql  006_clean_embedding_data.sql
demos/03-memory-agent/backend/tests/: conftest.py  test_agent.py  test_api.py  test_auth_api.py  test_chat_memoery.py  test_chat_memory_integration.py  test_config.py  test_db.py  test_embedding_zhipuai.py  test_embeddings.py  test_importance_score_repository.py  test_importance_scorer.py  test_kimi.py  test_memory_manager.py  test_memory_segment_repository.py  test_memory_summary_repository.py  test_migration_004.py  test_providers.py  test_smart_memory_config.py  test_smart_memory_e2e.py  test_smart_memory_manager.py  test_tools.py  test_topic_segmenter.py  test_vector_store.py
(+138 files in other folders)
